# AI-Supervisory-Review-Simulator-for-Financial-Services

./: .gitignore  README.md  pyproject.toml  vercel.json
data/raw/: emerald_credit_synthetic.csv
data/test_cases/: agentic_loan_assistant_cases.json  genai_finance_assistant_cases.json
docs/: VALIDATION_AND_LIMITATIONS.md  collaboration_workflow.md  deployment.md  limitations.md  methodology.md  model_card.md  risk_taxonomy.md  supervisory_evidence_pack.md
outputs/metrics/: agentic_results.csv  agentic_tool_log.csv  calibration_table.csv  credit_model_metrics.json  fairness_metrics.csv  feature_importance.csv  genai_results.csv  risk_register.csv  robustness_metrics.json
outputs/reports/: mock_supervisory_letter.md
src/: __init__.py  config.py
src/agentic_assistant/: __init__.py  agent.py  evaluator.py  tool_logging.py  tools.py
src/credit_model/: __init__.py  calibration.py  evaluate.py  explainability.py  fairness.py  robustness.py  train.py
src/data_generation/: generate_credit_data.py
src/genai_assistant/: __init__.py  assistant.py  evaluator.py  scoring.py  test_cases.py
src/reporting/: __init__.py  charts.py  generate_report.py  supervisory_letter.py
src/risk/: risk_register.py  scoring_model.py  taxonomy.py
tests/: test_agentic_evaluator.py  test_credit_model.py  test_genai_evaluator.py  test_report_generation.py  test_risk_register.py
web/: index.html  package-lock.json  package.json  vercel.json
web/public/: dashboard_data.json  supervisory_evidence_pack.md
web/src/: App.jsx  components.jsx  data.js  main.jsx  styles.css
(+7 files in other folders)
