[project]
name = "ai-supervisory-review"
version = "0.1.0"
description = "Regulator-style AI risk assessment simulator for financial services."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
